Add game logic, remove test folder, target es6 with TS to allow private class fields

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --max-warnings 0 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}'",
-    "lint:fix": "eslint --fix 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}'"
+    "lint": "eslint --max-warnings 0 'src/**/*.{ts,tsx}'",
+    "lint:fix": "eslint --fix 'src/**/*.{ts,tsx}'"
   },
   "eslintConfig": {
     "extends": [
